--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">LostAndFoundMapApp</string>
+    <string name="app_name">Private Truck Sharing App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="google_pay_api_key">AIzaSyCC_ZWKwMo7wapVeqdzmy4iBlMjkQDfF_c</string>
+
 </resources>
